Updated logo and about page

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Ju Hong Kim
 description: A random blog by a random human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/z.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: nabimoon1234@gmail.com
+  email: 
   facebook:
   flickr:
   github: zakuarbor
