--- a/_config.yml
+++ b/_config.yml
@@ -45,14 +45,14 @@ google_analytics:
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: https://zakuarbor.github.io
+url: https://zakuarbor.github.io/blog #https://zakuarbor.github.io
 enforce_ssl: https://zakuarbor.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/blog"
+baseurl: "" #"/blog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
