--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Ju Hong Kim
 description: A random blog by a random human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/z.png
+avatar: /images/pikachu_pfp_bw.png
 
 #
 # Flags below are optional
