fix metatag image url

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: A random blog by a random human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/pikachu_pfp_bw.png
-image: /images/pikachu_pfp.png
+image: https://zakuarbor.github.io/blog/images/pikachu_pfp.png
 #
 # Flags below are optional
 #
