fix metatag image url attempt 3

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ author: Ju Hong Kim
 description: A random blog by a random human
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/pikachu_pfp_bw.png
-image: https://zakuarbor.github.io/blog/images/pikachu_pfp.png
+avatar: /blog/images/pikachu_pfp_bw.png
+
 #
 # Flags below are optional
 #
